# bluetooth

./: .gitignore  Cargo.toml
arduino/: arduino.ino
host/: Cargo.toml
host/src/: core.rs  main.rs
host/src/core/: action.rs  mod.rs  state.rs
host/src/ui/: mod.rs  scan.rs
scripts/: scan.swift
