[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.5"
futures = "0.3.30"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
tokio = { version = "1.36.0", features = ["full"] }
