[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
btleplug = "0.11.5"
crossterm = "0.27.0"
futures = "0.3.30"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unicode-width = "0.1.11"
